# jacquard

./: CMakeLists.txt  README.md  build.sh  info.plist  run.sh
drafts/: 2_2_twill.jqd  birds_eye.jqd  herringbone.jqd  plain_weave.jqd  point_twill.jqd  rosepath.jqd
forms/: loomsettingsdialog.ui  mainwindow.ui
glsl/: sdf.all.glsl  sdf.defines.glsl  sdf.frag.glsl  sdf.loom.glsl  sdf.pbr.glsl  sdf.scene.glsl
resources/: glsl.qrc  style.qss  textures.qrc
src/: draftgridwidget.cpp  draftgridwidget.h  loomsettingsdialog.cpp  loomsettingsdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mygl.cpp  mygl.h  utils.h
